# EduRoll

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  docker-compose.yml  foundry.toml  init.sql
circuits/circom/: transfer_ecdsa_100.circom  transfer_ecdsa_20.circom  transfer_eddsa_100.circom  transfer_eddsa_1000.circom  transfer_eddsa_20.circom
circuits/noir/: transfer.nr
docs/: README.md  circuit_design.md  offchain_communication.md  onchain_communication.md
lib/forge-std/src/: Base.sol  StdChains.sol  StdConstants.sol  StdStorage.sol  StdUtils.sol  Vm.sol  safeconsole.sol
lib/forge-std/src/interfaces/: IERC1155.sol  IERC20.sol  IERC4626.sol  IERC6909.sol  IERC721.sol  IERC7540.sol  IERC7575.sol
lib/forge-std/test/: StdCheats.t.sol  StdError.t.sol  StdMath.t.sol  StdStorage.t.sol
lib/openzeppelin-contracts/: SECURITY.md  hardhat.config.js
lib/openzeppelin-contracts/certora/diff/: account_extensions_draft-AccountERC7579.sol.patch
lib/openzeppelin-contracts/contracts/access/: AccessControl.sol
lib/openzeppelin-contracts/contracts/access/extensions/: AccessControlDefaultAdminRules.sol  AccessControlEnumerable.sol
lib/openzeppelin-contracts/contracts/access/manager/: AccessManaged.sol  AccessManager.sol
lib/openzeppelin-contracts/contracts/account/extensions/: draft-AccountERC7579.sol  draft-AccountERC7579Hooked.sol  draft-ERC7821.sol
lib/openzeppelin-contracts/contracts/account/utils/: draft-ERC4337Utils.sol  draft-ERC7579Utils.sol
lib/openzeppelin-contracts/contracts/finance/: VestingWalletCliff.sol
lib/openzeppelin-contracts/contracts/governance/: Governor.sol  TimelockController.sol
lib/openzeppelin-contracts/contracts/governance/extensions/: GovernorCountingFractional.sol  GovernorCountingOverridable.sol  GovernorCountingSimple.sol  GovernorPreventLateQuorum.sol  GovernorSequentialProposalId.sol  GovernorSettings.sol  GovernorTimelockAccess.sol  GovernorTimelockCompound.sol  GovernorTimelockControl.sol  GovernorVotesSuperQuorumFraction.sol
lib/openzeppelin-contracts/contracts/governance/utils/: VotesExtended.sol
lib/openzeppelin-contracts/contracts/interfaces/: IERC4906.sol  draft-IERC7579.sol  draft-IERC7786.sol  draft-IERC7802.sol
lib/openzeppelin-contracts/contracts/metatx/: ERC2771Context.sol
lib/openzeppelin-contracts/contracts/mocks/: ERC2771ContextMock.sol
lib/openzeppelin-contracts/contracts/mocks/account/: AccountMock.sol
lib/openzeppelin-contracts/contracts/mocks/docs/: ERC4626Fees.sol
lib/openzeppelin-contracts/contracts/proxy/transparent/: TransparentUpgradeableProxy.sol
lib/openzeppelin-contracts/contracts/proxy/utils/: Initializable.sol  UUPSUpgradeable.sol
lib/openzeppelin-contracts/contracts/token/ERC1155/: ERC1155.sol
lib/openzeppelin-contracts/contracts/token/ERC20/: ERC20.sol
lib/openzeppelin-contracts/contracts/token/ERC6909/: draft-ERC6909.sol
lib/openzeppelin-contracts/contracts/token/ERC721/: ERC721.sol
lib/openzeppelin-contracts/contracts/token/common/: ERC2981.sol
lib/openzeppelin-contracts/contracts/utils/: Arrays.sol  Blockhash.sol  Bytes.sol  CAIP10.sol  CAIP2.sol  Memory.sol  NoncesKeyed.sol  Panic.sol
lib/openzeppelin-contracts/contracts/utils/cryptography/: EIP712.sol  P256.sol  RSA.sol  WebAuthn.sol
lib/openzeppelin-contracts/contracts/utils/introspection/: ERC165.sol
lib/openzeppelin-contracts/contracts/utils/math/: Math.sol
lib/openzeppelin-contracts/contracts/utils/structs/: MerkleTree.sol
lib/openzeppelin-contracts/lib/forge-std/scripts/: vm.py
lib/openzeppelin-contracts/lib/forge-std/src/: StdChains.sol  StdCheats.sol  StdStorage.sol  StdUtils.sol  Vm.sol  console.sol
lib/openzeppelin-contracts/lib/forge-std/test/: StdCheats.t.sol  StdUtils.t.sol
lib/openzeppelin-contracts/lib/halmos-cheatcodes/: README.md
lib/openzeppelin-contracts/lib/halmos-cheatcodes/src/: SVM.sol
lib/openzeppelin-contracts/scripts/checks/: inheritance-ordering.js
lib/openzeppelin-contracts/scripts/generate/templates/: Arrays.js
lib/openzeppelin-contracts/scripts/upgradeable/: upgradeable.patch
lib/openzeppelin-contracts/test/account/utils/: draft-ERC7579Utils.t.sol
lib/openzeppelin-contracts/test/helpers/: erc4337.js  governance.js
lib/openzeppelin-contracts/test/proxy/: Clones.t.sol
lib/openzeppelin-contracts/test/utils/: Arrays.t.sol  ShortStrings.t.sol
lib/openzeppelin-contracts/test/utils/cryptography/: P256.t.sol  RSA.test.js  SigVer15_186-3.rsp  WebAuthn.t.sol
offchain/crates/archiver/: Cargo.toml  archiver.Dockerfile
offchain/crates/archiver/src/: lib.rs  main.rs
offchain/crates/execution/: Cargo.toml
offchain/crates/execution/src/: apply.rs  lib.rs  state.rs
offchain/crates/merkle/: Cargo.toml
offchain/crates/merkle/src/: keccak_tree.rs  keccak_tree_tests.rs  lib.rs  poseidon_sparse.rs  poseidon_sparse_tests.rs
offchain/crates/prover/: Cargo.toml  prover.Dockerfile
offchain/crates/prover/src/: lib.rs  main.rs
offchain/crates/sequencer/: Cargo.toml  sequencer.Dockerfile
offchain/crates/sequencer/src/: api.rs  batcher.rs  lib.rs  main.rs  state_loader.rs
offchain/crates/storage/: Cargo.toml
offchain/crates/storage/src/: archiver.rs  connection.rs  lib.rs  prover.rs  sequencer.rs  submitter.rs
offchain/crates/submitter/: Cargo.toml  submitter.Dockerfile
offchain/crates/submitter/src/: lib.rs  main.rs
offchain/crates/types/: Cargo.toml
offchain/crates/types/src/: account.rs  batch.rs  crypto_utils.rs  hashes.rs  keys.rs  lib.rs  merkle_proof.rs  messages.rs  tx.rs
script/: Deploy.s.sol  Deposit.s.sol  SubmitBatch.s.sol  Withdraw.s.sol
simulation-scripts/: build-circuit.sh  remove.sh  run-fresh.sh  run-pause.sh  run-resume.sh
src/: BridgeERC20.sol  Rollup.sol  Verifier.sol  Verifier_mock.sol
src/interfaces/: IBridge.sol  IRollup.sol  IVerifier.sol
src/mocks/: MockToken.sol
test/: Bridge.t.sol  Rollup.t.sol
tools/accounts/: Cargo.toml  seed_accounts.Dockerfile
tools/accounts/src/: lib.rs
tools/test_client/: Cargo.toml  test_client.Dockerfile
tools/test_client/src/: main.rs
(+35 files in other folders)
