# WORKSPACE MEMBERS
[workspace]
members = [
    "offchain/crates/sequencer",
    "offchain/crates/prover",
    "offchain/crates/submitter",
    "offchain/crates/archiver",
    "offchain/crates/types",
    "offchain/crates/execution",
    "offchain/crates/merkle",
    "tools/test_client"
]
resolver = "2"

# WORKSPACE DEPENDENCIES
[workspace.dependencies]
# Asynchronous Runtime
tokio = { version = "1", features = ["full"] }

# For Sequencer - High performance web framework
axum = "0.7"

# Hashing for Merkle Tree -> For Sequencer
blake3 = "1.0"
# Binary serialization -> For Sequencer and Prover
bincode = "1.3"
# Hex encoding/decoding -> For TestClient
hex = "0.4"

# Serialization/Deserialization (Used by all services for data exchange)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Database Access (Used by Sequencer, Submitter, Archiver)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Ethereum Interaction (Used by Submitter and Test Client)
ethers = "2.0"
ethers-core = "2.0"
ethers-signers = "2.0"
clap = { version = "4.0", features = ["derive"] }

# Keccak-256 / SHA3 hashing
sha3 = "0.10"

# Minimal Keccak hashing library
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Core ZK-SNARK crypto library for BN254 curve
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }

# Core Arkworks crypto library
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }


# Embedded db
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
anyhow = "1.0"


# 3. PROFILE OPTIMIZATION
#    Optimization settings, especially for the memory/CPU-heavy Prover.
#    This ensures your production builds are fast and efficient.
[profile.release]
# Optimize heavily for speed (Level 3)
opt-level = 3
# Enable Link-Time Optimization for better final binary performance
lto = true 
# Use fewer CPU cycles/less memory for debugging symbols
debug = false
# Remove unnecessary symbols
strip = true 
# Crash immediately on panic (faster than unwinding)
panic = "abort"