[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

[lib]
name = "accounts"
path = "src/lib.rs"

[[bin]]
name = "seed_accounts"
path = "src/bin/seed_accounts.rs"

[dependencies]
# Hand-rolled circomlib-compatible EdDSA-Poseidon over BabyJubJub.
# Uses pure-arkworks for the curve and light-poseidon for hashing — no
# babyjubjub-rs / blake-hash / ppv-lite86 dependency (the generic backend of
# ppv-lite86 panics on aarch64, which would block the Docker builds).
ark-ed-on-bn254 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
light-poseidon = { workspace = true }
sha2 = "0.10"

# Used by the seed_accounts binary for building the genesis tree.
merkle = { path = "../../offchain/crates/merkle" }
types  = { path = "../../offchain/crates/types" }

# Workspace utilities
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
bigdecimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
ethers = { workspace = true }
