[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Hashing / encoding
hex = { workspace = true }

# Random intervals for continuous mode
rand = { workspace = true }

# Internal crates
types    = { path = "../../offchain/crates/types" }
accounts = { path = "../accounts" }
anyhow   = { workspace = true }
