[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
num-bigint = "0.4"

# Used by build_witness_from_db (#3) to construct AccountState values for
# the Poseidon Merkle tree reconstruction.
ethers = { workspace = true }
sqlx = { workspace = true }

# Internal Crates
types = { path = "../types" }
storage = { path = "../storage" }
merkle = { path = "../merkle" }