[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = {workspace = true}
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
sqlx = {workspace = true}

# INTERNAL CRATES
types = { path = "../types" }
execution = { path = "../execution" }
merkle = { path = "../merkle" }