[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
bigdecimal = { workspace = true }
hex = { workspace = true }

# Internal crates
types     = { path = "../types" }
execution = { path = "../execution" }
merkle    = { path = "../merkle" }
storage   = { path = "../storage" }
accounts  = { path = "../../../tools/accounts" }
