[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }
types = { path = "../types" }
tokio = { workspace = true }
