[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

# Internal crates
types   = { path = "../types" }
storage = { path = "../storage" }
