[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
ethers = { workspace = true }

# Internal Crates