[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
ethers = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
tiny-keccak = { workspace = true }
sqlx = { workspace = true }
light-poseidon = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

# Internal Crates